# populace-dynamics

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AUDIT.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  gates.yaml  pyproject.toml  vercel.json
.beads/: deletions.jsonl  issues.jsonl
.github/workflows/: deploy.yml  tests.yml
docs/: _quarto.yml  appendix-colorado-ltc-rules-packet.md  appendix-dynasim.md  benchmark-model-component-matrix.md  calibration-targets.md  data-sources.md  domains-of-validity.md  evaluation-and-model-selection.md  existing-models.md  funder-summary.md  implementation-plan-and-budget-logic.md  index.md  infrastructure.md  literature-review.md  methodology.md  operationalizing-disability-and-claiming.md  operationalizing-family-and-auxiliary-benefits.md  operationalizing-longitudinal-construction.md  operationalizing-mortality-and-projection-drift.md  policy-applications.md  public-validation-inventory.md  references.bib  risks-and-stage-gates.md  roadmap.md  scoring-and-resolution.md  team.md  technical-specifications.md
docs/_static/: custom.css  methodology-interactive.html
docs/adr/: 0001-populace-axiom-seam-ownership.md  0002-uk-extension-ukhls.md  0003-employer-firm-extension.md  0004-linkage-qc.md
docs/amendments/: gate_m6_amendment_1_closed_domain_floors.md  gate_w1_amendment_1_family_b_di_bands.md  gate_w1_amendment_2_family_a_concept_cells.md  gate_w1_amendment_3_hh_size_and_c2_pair.md  m6_amendment_4_qstar_lock_addendum.md
docs/analysis/: m6_c3_f1_mechanism_diagnostic_results.json  m6_candidate2_entry_dissolved_conformance.md  m6_candidate2_preflight1_law_delta.json  m6_candidate2_preflight1_law_delta.md  m6_candidate2_registered_abort_execution_v1.txt  m6_candidate2_registered_abort_v1.json  m6_candidate2_registered_abort_v1.md  m6_candidate2_registration10_execution_incident_v1.json  m6_candidate2_registration10_execution_incident_v1.md  m6_candidate2_registration10_execution_incident_v1.txt  m6_candidate2_registration9_execution_incident_v1.json  m6_candidate2_registration9_execution_incident_v1.md  m6_candidate2_registration9_execution_incident_v1.txt  (+41 more)
jupyterbook/: calibration-targets.md  data-sources.md  existing-models.md  infrastructure.md  intro.md  literature-review.md  methodology.md  myst.yml  references.bib  roadmap.md  team.md  technical-specifications.md
paper/: paper.qmd
reviews/: SABELHAUS_FEEDBACK.md  feedback-dutta-gupta.md  feedback_fichtner.md  feedback_ghenis.md
runs/: NOTES-gate_w1_candidate4.md  aux_benefit_examples_v1.json  c10_diagnostics_v1.json  c2st_forensics_v1.json  claiming_reference_v1.json  crosswave_jobid_check_draft_v0.json  downstream_relevance_c7_v1.json  employer_firm_floors_draft_v0.json  employer_firm_floors_v1.json  gate1_qrf_baseline_v1.json  gate1_qrf_latent_perm_v1.json  gate1_qrf_latent_perm_v2.json  gate1_qrf_structural_v1.json  gate1_rank_kernel_v1.json  gate1_rank_knn_v1.json  gate1_rank_knn_v2.json  gate1_rank_knn_v3.json  gate1_rank_knn_v4.json  gate1_rank_knn_v5.json  gate1_rank_v1.json  gate1_splice_v1.json  gate1_splice_v2.json  gate2_floors_v1.json  gate2_floors_v2.json  gate2_forensics2_v1.json  gate2_forensics3_v1.json  gate2_forensics4_v1.json  gate2_forensics_v1.json  gate2_hazard_v1.json  gate2_hazard_v10.json  gate2_hazard_v11.json  gate2_hazard_v12.json  gate2_hazard_v13.json  gate2_hazard_v14.json  gate2_hazard_v15.json  gate2_hazard_v16.json  gate2_hazard_v2.json  gate2_hazard_v3.json  gate2_hazard_v4.json  gate2_hazard_v5.json  (+81 more)
scripts/: analyze_m6_remarriage_train_delta.py  build_aux_benefit_examples.py  build_claiming_reference.py  build_cross_engine_pia_artifact.py  build_crosswave_jobid_check.py  build_disability_floors.py  build_downstream_relevance.py  build_employer_firm_floors.py  build_gate1_floor_artifacts.py  build_gate2_floors.py  build_gate2b_floors.py  build_gate2c_floors.py  build_gate_w1_floors.py  build_imputation_sensitivity.py  build_legacy_manifest.py  build_m4_gate_floors.py  build_m6_holdout_floors.py  build_m6_holdout_floors_v2.py  build_m6_holdout_floors_v3.py  build_m6_holdout_floors_v4.py  build_mortality_floors.py  build_noemp_band_evidence.py  build_paper_figures.py  build_pia_proxy_floor.py  build_seam_reconciliation.py  build_sipp_e8_e9_floors.py  build_sipp_spell_floors.py  build_ssa_claim_ages.py  build_tenure_floors.py  c10_forensics.py  c10_seed_extension.py  c2st_forensics_lib.py  check_j2jod_margin_agreement.py  export_frame_persons.py  extract_ssa_claim_ages_2014.py  extract_ssa_effective_interest_rates_2014.py  extract_ssa_tr_ultimate_assumptions_2014.py  extract_ssa_trust_fund_opening_reserve_2014.py  fetch_employer_firm_targets.py  fetch_nchs_asfr.py  (+104 more)
tests/: README-tiers.md  conftest.py  test_adr_consistency.py  test_c10_diagnostics.py  test_c2st_forensics.py  test_claiming.py  test_contract_identity.py  test_couple_formation_v2.py  test_crosswave_jobid_check.py  test_disability_conversion.py  test_disability_floors.py  test_downstream_relevance.py  test_employer_firm_floors.py  test_extract_ssa_claim_ages_2014.py  test_extract_ssa_effective_interest_rates_2014.py  test_extract_ssa_tr_ultimate_assumptions_2014.py  test_extract_ssa_trust_fund_opening_reserve_2014.py  test_firms_banding.py  test_firms_targets.py  test_forecast_ledger.py  test_gate1_qrf_baseline.py  test_gate1_qrf_candidate10.py  test_gate1_qrf_candidate11.py  test_gate1_qrf_candidate2.py  test_gate1_qrf_candidate3.py  test_gate1_qrf_candidate4.py  test_gate1_qrf_candidate5a.py  test_gate1_qrf_candidate5a2.py  test_gate1_qrf_candidate5b.py  test_gate1_qrf_candidate6.py  test_gate1_qrf_candidate7.py  test_gate1_qrf_candidate8.py  test_gate1_qrf_candidate9.py  test_gate2_candidate1.py  test_gate2_candidate10.py  test_gate2_candidate11.py  test_gate2_candidate12.py  test_gate2_candidate13.py  test_gate2_candidate14.py  test_gate2_candidate15.py  (+151 more)
(+172 files in other folders)
