[project]
name = "policyengine-social-security-model"
version = "0.1.0"
description = "Open-source dynamic microsimulation model for Social Security policy analysis"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Max Ghenis", email = "max@policyengine.org"},
    {name = "Ben Ogorek"},
    {name = "John Sabelhaus"},
]
maintainers = [
    {name = "Max Ghenis", email = "max@policyengine.org"},
]
keywords = [
    "microsimulation",
    "social-security",
    "policy-analysis",
    "retirement",
    "dynamic-modeling",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Economics",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
]

# Will add after Phase 1:
# imputation = [
#     "microimpute>=0.1.0",
#     "scikit-garden>=0.1.3",  # For quantile regression forests
# ]
# calibration = [
#     "microcalibrate>=0.1.0",
# ]
# policyengine = [
#     "policyengine-us>=1.400.0",
#     "policyengine-us-data>=0.10.0",
# ]

[project.urls]
Homepage = "https://github.com/PolicyEngine/social-security-model"
Documentation = "https://policyengine.github.io/social-security-model"
Repository = "https://github.com/PolicyEngine/social-security-model"
Issues = "https://github.com/PolicyEngine/social-security-model/issues"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []  # Will add packages after Phase 1

[tool.black]
line-length = 79
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["."]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
