[project]
name = "policyengine-social-security-model"
version = "0.1.0"
description = "Open-source dynamic microsimulation model for Social Security policy analysis"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = {text = "MIT"}
authors = [
    {name = "Max Ghenis", email = "max@policyengine.org"},
]
maintainers = [
    {name = "Max Ghenis", email = "max@policyengine.org"},
]
keywords = [
    "microsimulation",
    "social-security",
    "policy-analysis",
    "retirement",
    "dynamic-modeling",
    "oasdi",
    "policyengine",
    "tax-benefit",
    "quantile-regression",
    "calibration",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Economics",
]

dependencies = [
    "openpyxl>=3.1.0",
    "numpy>=1.24.0",
    "pandas>=2.2.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.6.0",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
    "pre-commit>=3.0.0",
]
model = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
]

[project.urls]
Homepage = "https://github.com/PolicyEngine/social-security-model"
Documentation = "https://policyengine.github.io/social-security-model"
Repository = "https://github.com/PolicyEngine/social-security-model"
Issues = "https://github.com/PolicyEngine/social-security-model/issues"
Changelog = "https://github.com/PolicyEngine/social-security-model/releases"
PolicyEngine = "https://policyengine.org"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 79
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: tests with no external data, artifact, or oracle dependency",
    "artifact: tests that inspect committed runs/*.json artifacts",
    "integration_psid: tests whose modules reference the PSID data root",
    "reproduction_legacy: frozen Gate-2 candidate reproduction tests",
    "oracle_policyengine: tests that need a policyengine-us checkout",
]
